main page title

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
       <div class="navbar navbar-app navbar-absolute-top">
         <div class="navbar-brand navbar-brand-center" ui-yield-to="title">
-          Concursos 2015 - ATE MTEySS
+          Concursos 2015 - ATE
         </div>
         <div class="btn-group pull-left">
           <div ui-toggle="uiSidebarLeft" class="btn sidebar-toggle">
