--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         </div>
         <div class="btn-group pull-left">
           <div ui-toggle="uiSidebarLeft" class="btn sidebar-toggle">
-            <i class="fa fa-bars"></i> Menú
+            <i class="fa fa-bars"></i>
           </div>
         </div>
         <!--
