links de la homepage

--- a/home.html
+++ b/home.html
@@ -8,32 +8,49 @@
       </div>
       <div class="list-group-item list-group-item-home media">
         <div>
-          <i class="fa fa-gamepad feature-icon text-primary"></i>
+          <a href='#/contenidos'>
+            <i class="fa fa-book feature-icon text-primary"></i>
+          </a>
         </div>
         <div class="media-body">
-            <h3 class="media-heading">Play around a little</h3>
-            Open the sidebar and start testing features
+          <h3 class="media-heading">Consultar el material de estudio</h3>
+          Hace click en el icono para consultar el material de estudio.
         </div>
       </div>
 
       <div class="list-group-item list-group-item-home media">
         <div>
-          <i class="fa fa-tachometer feature-icon  text-primary"></i>
+          <a href='#/links'>
+            <i class="fa fa-list-ul feature-icon  text-primary"></i>
+          </a>
         </div>
         <div class="media-body">
-            <h3 class="media-heading">Test responsiveness and speed</h3>
+            <h3 class="media-heading">Links de interes</h3>
             Scroll, tap, navigate, test that everything is smooth
         </div>
       </div>
 
+      <div class="list-group-item list-group-item-home media">
+        <div>
+          <a href='#/afiliate'>
+            <i class="fa fa-group feature-icon  text-primary"></i>
+          </a>
+        </div>
+        <div class="media-body">
+            <h3 class="media-heading">AfiliATE</h3>
+            Sumate a un sindicato que pelea por tus derechos.
+        </div>
+      </div>
 
       <div class="list-group-item list-group-item-home media">
         <div>
-          <i class="fa fa-expand feature-icon  text-primary"></i>
+          <a href='#/afiliate'>
+            <i class="fa fa-envelope-o feature-icon  text-primary"></i>
+          </a>
         </div>
         <div class="media-body">
-            <h3 class="media-heading">Resize your browser</h3>
-            Stretch and squeeze your browser window to see both mobile and desktop versions.
+            <h3 class="media-heading">Escribinos</h3>
+            Hacenos llegar tus dudas y consultas. Podes escribirnos a ate@trabajo.gob.ar.
         </div>
       </div>
 
