adjust font size for smaller devices

--- a/contenidos.html
+++ b/contenidos.html
@@ -10,7 +10,7 @@
     placeholder="Search.." />
 
   <div class="scrollable-content" ui-scroll-bottom='bottomReached()'>
-    <div class="list-group">
+    <div class="list-group contenidos-items">
       <a class="list-group-item" ng-click='open(parent)' ng-if='parent'>
         ...&nbsp;<i class="fa fa-level-up"></i>
       </a>
