descripcion en la home page

--- a/home.html
+++ b/home.html
@@ -5,6 +5,7 @@
       <div class="list-group-item list-group-item-home">
         <h1>Material de estudio para Concursos <small>2015</small>
         </h1>
+        Desde la <a href='http://www.ate-ministeriodetrabajo.blogspot.com.ar/' target='_blank'>Junta Interna de ATE</a> del Ministerio de Trabajo ponemos a disposición de nuestros companer@s esta herramienta para ayudarlos a prepararse para los Concursos 2015. Hacé click <a href='#/contenidos'>aquí</a> para consultar el material de estudio.
       </div>
       <div class="list-group-item list-group-item-home media">
         <div>
@@ -26,7 +27,7 @@
         </div>
         <div class="media-body">
             <h3 class="media-heading">Links de interés</h3>
-            Scroll, tap, navigate, test that everything is smooth
+            Sitios web y contactos donde obtener más información.
         </div>
       </div>
 
@@ -38,7 +39,7 @@
         </div>
         <div class="media-body">
             <h3 class="media-heading">AfiliATE</h3>
-            Sumate a un sindicato que pelea por tus derechos.
+            Sumate a un sindicato que pelea por tus derechos. Completá hoy mismo la <a href='docs/ficha_afiliacion.pdf' target='_blank'>ficha de afiliación</a>.
         </div>
       </div>
 
@@ -50,7 +51,7 @@
         </div>
         <div class="media-body">
             <h3 class="media-heading">Escribinos</h3>
-          Hacenos llegar tus dudas y consultas. Escribinos a <a href='mailto:ate@trabajo.gob.ar?Subject=Consulta por concursos'>ate@trabajo.gob.ar</a>.
+          Hacenos llegar tus dudas y ayudanos a reunir el material de estudio. Escribinos a <a href='mailto:ate@trabajo.gob.ar?Subject=Consulta por concursos'>ate@trabajo.gob.ar</a>.
         </div>
       </div>
 
