--- a/links.html
+++ b/links.html
@@ -5,35 +5,53 @@
       <div class="list-group-item list-group-item-home">
         <h1>Material de estudio para Concursos <small>2015</small>
         </h1>
+        Desde la <a href='http://www.ate-ministeriodetrabajo.blogspot.com.ar/' target='_blank'>Junta Interna de ATE</a> del Ministerio de Trabajo ponemos a disposición de nuestros companer@s esta herramienta para ayudarlos a prepararse para los Concursos 2015. Hacé click <a href='#/contenidos'>aquí</a> para consultar el material de estudio.
       </div>
       <div class="list-group-item list-group-item-home media">
         <div>
-          <i class="fa fa-gamepad feature-icon text-primary"></i>
+          <a href='#/contenidos'>
+            <i class="fa fa-book feature-icon text-primary"></i>
+          </a>
         </div>
         <div class="media-body">
-            <h3 class="media-heading">Play around a little</h3>
-            Open the sidebar and start testing features
+          <h3 class="media-heading">Consultá el material de estudio</h3>
+          Hacé click en el ícono para consultar el material de estudio.
+        </div>
+      </div>
+
+      <div class="list-group-item list-group-item-home media">
+        <div>
+          <a href='#/links'>
+            <i class="fa fa-list-ul feature-icon  text-primary"></i>
+          </a>
+        </div>
+        <div class="media-body">
+            <h3 class="media-heading">Links de interés</h3>
+            Sitios web y contactos donde obtener más información.
         </div>
       </div>
 
       <div class="list-group-item list-group-item-home media">
         <div>
-          <i class="fa fa-tachometer feature-icon  text-primary"></i>
+          <a href='#/afiliate'>
+            <i class="fa fa-group feature-icon  text-primary"></i>
+          </a>
         </div>
         <div class="media-body">
-            <h3 class="media-heading">Test responsiveness and speed</h3>
-            Scroll, tap, navigate, test that everything is smooth
+            <h3 class="media-heading">AfiliATE</h3>
+            Sumate a un sindicato que pelea por tus derechos. Completá hoy mismo la <a href='docs/ficha_afiliacion.pdf' target='_blank'>ficha de afiliación</a>.
         </div>
       </div>
 
-
       <div class="list-group-item list-group-item-home media">
         <div>
-          <i class="fa fa-expand feature-icon  text-primary"></i>
+          <a href='mailto:ate@trabajo.gob.ar?Subject=Consulta por concursos'>
+            <i class="fa fa-envelope-o feature-icon  text-primary"></i>
+          </a>
         </div>
         <div class="media-body">
-            <h3 class="media-heading">Resize your browser</h3>
-            Stretch and squeeze your browser window to see both mobile and desktop versions.
+            <h3 class="media-heading">Escribinos</h3>
+          Hacenos llegar tus dudas y ayudanos a reunir el material de estudio. Escribinos a <a href='mailto:ate@trabajo.gob.ar?Subject=Consulta por concursos'>ate@trabajo.gob.ar</a>.
         </div>
       </div>
 
