--- a/afiliate.html
+++ b/afiliate.html
@@ -7,29 +7,6 @@
         </h1>
         Desde la <a href='http://www.ate-ministeriodetrabajo.blogspot.com.ar/' target='_blank'>Junta Interna de ATE</a> del Ministerio de Trabajo ponemos a disposición de nuestros companer@s esta herramienta para ayudarlos a prepararse para los Concursos 2015. Hacé click <a href='#/contenidos'>aquí</a> para consultar el material de estudio.
       </div>
-      <div class="list-group-item list-group-item-home media">
-        <div>
-          <a href='#/contenidos'>
-            <i class="fa fa-book feature-icon text-primary"></i>
-          </a>
-        </div>
-        <div class="media-body">
-          <h3 class="media-heading">Consultá el material de estudio</h3>
-          Hacé click en el ícono para consultar el material de estudio.
-        </div>
-      </div>
-
-      <div class="list-group-item list-group-item-home media">
-        <div>
-          <a href='#/links'>
-            <i class="fa fa-list-ul feature-icon  text-primary"></i>
-          </a>
-        </div>
-        <div class="media-body">
-            <h3 class="media-heading">Links de interés</h3>
-            Sitios web y contactos donde obtener más información.
-        </div>
-      </div>
 
       <div class="list-group-item list-group-item-home media">
         <div>
@@ -38,9 +15,25 @@
           </a>
         </div>
         <div class="media-body">
-            <h3 class="media-heading">AfiliATE</h3>
-            Sumate a un sindicato que pelea por tus derechos. Completá hoy mismo la <a href='docs/ficha_afiliacion.pdf' target='_blank'>ficha de afiliación</a>.
+          <h3 class="media-heading">AfiliATE</h3>
+          Sumate a un sindicato que pelea por tus derechos. Completá hoy mismo la <a href='docs/ficha_afiliacion.pdf' target='_blank'>ficha de afiliación</a>.
+
+
+          <br />
+          <br />
+
+          <object data="docs/ficha_afiliacion.pdf" type="application/pdf" width="90%" height="600px">
+            <a href='./docs/ficha_afiliacion.pdf'>
+              <img src='./docs/ficha_afiliacion-pag1.png'
+                alt='Ficha de afiliación a ATE'
+                title='Hacé click para descargar el archivo'
+                width='90%'
+                height='40%'
+              />
+            </a>
+          </object>
         </div>
+
       </div>
 
       <div class="list-group-item list-group-item-home media">
