--- a/home.html
+++ b/home.html
@@ -21,6 +21,18 @@
 
       <div class="list-group-item list-group-item-home media">
         <div>
+          <a href='#/preguntas'>
+            <i class="fa fa-question feature-icon  text-primary"></i>
+          </a>
+        </div>
+        <div class="media-body">
+            <h3 class="media-heading">Preguntas frecuentes</h3>
+            Consultá las preguntas más frecuentes que suelen.
+        </div>
+      </div>
+
+      <div class="list-group-item list-group-item-home media">
+        <div>
           <a href='#/links'>
             <i class="fa fa-list-ul feature-icon  text-primary"></i>
           </a>
