--- a/sidebar.html
+++ b/sidebar.html
@@ -4,6 +4,7 @@
     <div class="list-group" ui-turn-off='uiSidebarLeft'>
       <a class="list-group-item" href="#/">Home <i class="fa fa-chevron-right pull-right"></i></a>
       <a class="list-group-item" href="#/contenidos">Material de estudio <i class="fa fa-chevron-right pull-right"></i></a>
+      <a class="list-group-item" href="#/preguntas">Preguntas frecuentes <i class="fa fa-chevron-right pull-right"></i></a>
       <a class="list-group-item" href="#/links">Links de interés <i class="fa fa-chevron-right pull-right"></i></a>
       <a class="list-group-item" href="#/afiliate">AfiliATE<i class="fa fa-chevron-right pull-right"></i></a>
       <a class="list-group-item" href="#/acerca">Acerca de...<i class="fa fa-chevron-right pull-right"></i></a>
