--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
 
     <script src="bower_components/lodash/lodash.js"></script>
 
+    <script src="src/custom/filtersModule.js"></script>
     <script src="demo.js"></script>
     <script src="src/custom/repoModule.js"></script>
 
