arreglamos textos paginas, agregamos link colaborá

--- a/home.html
+++ b/home.html
@@ -3,7 +3,8 @@
 
     <div class="list-group text-center">
       <div class="list-group-item list-group-item-home">
-        <h1>Material de estudio para Concursos <small>2015</small>
+        <h1>Bibioteca digital<br />
+          Concursos <small>2015</small>
         </h1>
         Desde la <a href='http://www.ate-ministeriodetrabajo.blogspot.com.ar/' target='_blank'>Junta Interna de ATE</a> del Ministerio de Trabajo ponemos a disposición de nuestros companer@s esta herramienta para ayudarlos a prepararse para los Concursos 2015. Hacé click <a href='#/contenidos'>aquí</a> para consultar el material de estudio.
       </div>
@@ -21,13 +22,25 @@
 
       <div class="list-group-item list-group-item-home media">
         <div>
+          <a href='#'>
+            <i class="fa fa-refresh fa-spin feature-icon  text-primary"></i>
+          </a>
+        </div>
+        <div class="media-body">
+            <h3 class="media-heading">¡Colaborá!</h3>
+            Este sitio está siendo desarrollado colaborativamente por muchos compañer@s que buscan romper con la lógica competitiva que imponen los concursos. Colaborá con nosotros enviándonos normativas, resúmenes y correcciones a <a href="mailto:ate@trabajo.gob.ar">ate@trabajo.gob.ar</a>.
+        </div>
+      </div>
+
+      <div class="list-group-item list-group-item-home media">
+        <div>
           <a href='#/preguntas'>
             <i class="fa fa-question feature-icon  text-primary"></i>
           </a>
         </div>
         <div class="media-body">
-            <h3 class="media-heading">Preguntas frecuentes</h3>
-            Consultá las preguntas más frecuentes que suelen.
+            <h3 class="media-heading">Preguntá</h3>
+            Consultá las preguntas más frecuentes que suelen llegar a nosotros.
         </div>
       </div>
 
@@ -38,7 +51,7 @@
           </a>
         </div>
         <div class="media-body">
-            <h3 class="media-heading">Links de interés</h3>
+            <h3 class="media-heading">Consultá</h3>
             Sitios web y contactos donde obtener más información.
         </div>
       </div>
