--- a/links.html
+++ b/links.html
@@ -3,10 +3,12 @@
 
     <div class="list-group text-center">
       <div class="list-group-item list-group-item-home">
-        <h1>Material de estudio para Concursos <small>2015</small>
+        <h1>Bibioteca digital<br />
+          Concursos <small>2015</small>
         </h1>
         Desde la <a href='http://www.ate-ministeriodetrabajo.blogspot.com.ar/' target='_blank'>Junta Interna de ATE</a> del Ministerio de Trabajo ponemos a disposición de nuestros companer@s esta herramienta para ayudarlos a prepararse para los Concursos 2015. Hacé click <a href='#/contenidos'>aquí</a> para consultar el material de estudio.
       </div>
+
       <div class="list-group-item list-group-item-home media">
         <div>
           <a href='#/contenidos'>
