--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="demo.css" />
     <script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.0/angular.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.0/angular-route.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.0/angular-sanitize.min.js"></script>
     <script src="dist/js/mobile-angular-ui.min.js"></script>
     <!-- Required to use $swipe, $drag and Translate services -->
     <script src="dist/js/mobile-angular-ui.gestures.min.js"></script>
@@ -74,6 +75,7 @@
     <script src="src/custom/filtersModule.js"></script>
     <script src="demo.js"></script>
     <script src="src/custom/repoModule.js"></script>
+    <script src="src/custom/faqsModule.js"></script>
 
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
