--- a/home.html
+++ b/home.html
@@ -22,7 +22,7 @@
 
       <div class="list-group-item list-group-item-home media">
         <div>
-          <a href='#'>
+          <a href='javascript:void(0);'>
             <i class="fa fa-refresh fa-spin feature-icon  text-primary"></i>
           </a>
         </div>
