--- a/home.html
+++ b/home.html
@@ -10,12 +10,12 @@
       </div>
       <div class="list-group-item list-group-item-home media">
         <div>
-          <a href='#/contenidos'>
+          <a href='#/biblioteca'>
             <i class="fa fa-book feature-icon text-primary"></i>
           </a>
         </div>
         <div class="media-body">
-          <h3 class="media-heading">Consultá el material de estudio</h3>
+          <h3 class="media-heading">Consultá la biblioteca digital</h3>
           Hacé click en el ícono para consultar el material de estudio.
         </div>
       </div>
