--- a/index.html
+++ b/index.html
@@ -76,9 +76,11 @@
 
     <script src="src/custom/filtersModule.js"></script>
     <script src="src/custom/bookmarkModule.js"></script>
+
     <script src="demo.js"></script>
     <script src="src/custom/repoModule.js"></script>
     <script src="src/custom/faqsModule.js"></script>
+    <script src="src/custom/bibliotecaCtrl.js"></script>
 
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
