statically load contents for ie compatibility

--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
     <script src="demo.js"></script>
     <script src="src/custom/repoModule.js"></script>
     <script src="src/custom/faqsModule.js"></script>
+    <script src="src/custom/contentsModule.js"></script>
     <script src="src/custom/bibliotecaCtrl.js"></script>
 
     <script>
