--- a/index.html
+++ b/index.html
@@ -13,9 +13,17 @@
     <link rel="stylesheet" href="dist/css/mobile-angular-ui-base.min.css" />
     <link rel="stylesheet" href="dist/css/mobile-angular-ui-desktop.min.css" />
     <link rel="stylesheet" href="demo.css" />
+
+<!--
     <script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.0/angular.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.0/angular-route.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.0/angular-sanitize.min.js"></script>
+-->
+
+    <script src="dist/js/angular.min.js"></script>
+    <script src="dist/js/angular-route.min.js"></script>
+    <script src="dist/js/angular-sanitize.min.js"></script>
+
     <script src="dist/js/mobile-angular-ui.min.js"></script>
     <!-- Required to use $swipe, $drag and Translate services -->
     <script src="dist/js/mobile-angular-ui.gestures.min.js"></script>
