--- a/afiliate.html
+++ b/afiliate.html
@@ -5,10 +5,11 @@
 
       <div class="list-group-item list-group-item-home media">
         <div>
-          <a href='#/afiliate'>
-            <i class="fa fa-group feature-icon  text-primary"></i>
+          <a href='http://www.ate-ministeriodetrabajo.blogspot.com.ar/'>
+            <img src='docs/logos/logo_ate_trabajo.png' height='140px'/>
           </a>
         </div>
+
         <div class="media-body">
           <h3 class="media-heading">AfiliATE</h3>
           Sumate a un sindicato que pelea por tus derechos. Imprimí y completá hoy mismo la <a href='docs/ficha_afiliacion.pdf' target='_blank'>ficha de afiliación</a>.
