--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
       <div class="navbar navbar-app navbar-absolute-bottom">
         <div class="btn-group justified">
-          <a href="http://mteyss.github.io/" class="btn btn-navbar">Desarrollado por trabajadores expulsados del MTEySS</a>
+          <a href="#/acerca" class="btn btn-navbar">Desarrollado por trabajadores desplazados de sus puestos por el MTEySS</a>
         </div>
       </div>
 
