--- a/home.html
+++ b/home.html
@@ -35,7 +35,7 @@
 
       <div class="list-group-item list-group-item-home media">
         <div>
-          <a href='javascript:void(0);'>
+          <a href='#/acerca'>
             <i class="fa fa-refresh fa-spin feature-icon text-primary"></i>
           </a>
         </div>
