--- a/sidebar.html
+++ b/sidebar.html
@@ -1,5 +1,5 @@
 <div class="scrollable">
-  <h1 class="scrollable-header app-name">ATE Trabajo</h1>
+  <h1 class="scrollable-header app-name"><a class='app-name' target='_blank' href='http://www.ate-ministeriodetrabajo.blogspot.com.ar/'>ATE Trabajo</a></h1>
   <div class="scrollable-content">
     <div class="list-group" ui-turn-off='uiSidebarLeft'>
       <a class="list-group-item" href="#/">Home <i class="fa fa-chevron-right pull-right"></i></a>
