pagina de desarrollado por

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
       <div class="navbar navbar-app navbar-absolute-bottom">
         <div class="btn-group justified">
-          <a href="#/acerca" class="footer">Desarrollado por trabajadores desplazados de sus puestos por el MTEySS</a>
+          <a href="#/desarrollado" class="footer">Desarrollado por trabajadores desplazados de sus puestos por el MTEySS</a>
         </div>
       </div>
 
