add route tracking

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
       })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
       ga('create', 'UA-61751332-1', 'auto');
-      ga('send', 'pageview');
+      //ga('send', 'pageview');
     </script>
 
   </body>
