--- a/acerca.html
+++ b/acerca.html
@@ -4,7 +4,7 @@
     <div class="list-group text-center">
 
       <div class="list-group-item list-group-item-home">
-        <h1>Bibioteca digital<br />
+        <h1>Biblioteca digital<br />
           Concursos <small>2015</small>
         </h1>
       </div>
