--- a/biblioteca.html
+++ b/biblioteca.html
@@ -41,12 +41,11 @@
     </div>
   </div>
 
-<!--
   <a class="btn btn-block btn-lg btn-primary scrollable-footer" ui-toggle='searchBar'>
     <i class="fa fa-search"></i>
     <span ui-hide="searchBar">Mostrar</span>
     <span ui-show="searchBar">Ocultar</span>
-    barra de busqueda
+    barra de búsqueda
   </a>
--->
+
 </div>
