--- a/sidebar.html
+++ b/sidebar.html
@@ -3,7 +3,10 @@
   <div class="scrollable-content">
     <div class="list-group" ui-turn-off='uiSidebarLeft'>
       <a class="list-group-item" href="#/">Home <i class="fa fa-chevron-right pull-right"></i></a>
-      <a class="list-group-item" href="#/biblioteca">Biblioteca digital <i class="fa fa-chevron-right pull-right"></i></a>
+      <a class="list-group-item" href="#/biblioteca">Biblioteca digital <i class="fa fa-chevron-right pull-right"></i>
+      &nbsp;&nbsp;<span class="label label-info">{{root.childrenCount}} archivos</span>
+
+      </a>
       <a class="list-group-item" href="#/preguntas">Preguntas frecuentes <i class="fa fa-chevron-right pull-right"></i></a>
       <a class="list-group-item" href="#/links">Links de interés <i class="fa fa-chevron-right pull-right"></i></a>
       <a class="list-group-item" href="#/afiliate">AfiliATE<i class="fa fa-chevron-right pull-right"></i></a>
