--- a/home.html
+++ b/home.html
@@ -35,6 +35,18 @@
 
       <div class="list-group-item list-group-item-home media">
         <div>
+          <a href='#/capacitacion'>
+            <i class="fa fa-graduation-cap feature-icon text-primary"></i>
+          </a>
+        </div>
+        <div class="media-body">
+            <h3 class="media-heading">Capacitate</h3>
+          Accedé al material de la <a href='#/capacitacion'>capacitación sobre Empleo Público, Derecho Administrativo y Convenio Colectivo de Trabajo</a> que organizamos para ayudarte a preparte para los concursos.
+        </div>
+      </div>
+
+      <div class="list-group-item list-group-item-home media">
+        <div>
           <a href='#/acerca'>
             <i class="fa fa-refresh fa-spin feature-icon text-primary"></i>
           </a>
