--- a/capacitacion.html
+++ b/capacitacion.html
@@ -49,7 +49,7 @@
           <br />
 
           <p>
-            Haciendo click <a href='/#/biblioteca/otros/capacitacion_ate'>aquí</a> podrán acceder a todo el material de la capacitación.
+            Haciendo click <a href='/#/biblioteca/otros/capacitacion_ate'>aquí</a> podrás acceder a todo el material de la capacitación.
           </p>
           <div class="logo-sistemas">
             <img src="img/capacitacion/capacitacion_02.jpg"/>
