--- a/capacitate.html
+++ b/capacitate.html
@@ -12,7 +12,7 @@
 
       <div class="list-group-item list-group-item-home media">
         <div>
-          <a href='#/acerca'>
+          <a href='#/capacitate'>
             <i class="fa fa-graduation-cap feature-icon text-primary"></i>
           </a>
         </div>
