--- a/home.html
+++ b/home.html
@@ -35,13 +35,13 @@
 
       <div class="list-group-item list-group-item-home media">
         <div>
-          <a href='#/capacitacion'>
+          <a href='#/capacitate'>
             <i class="fa fa-graduation-cap feature-icon text-primary"></i>
           </a>
         </div>
         <div class="media-body">
             <h3 class="media-heading">Capacitate</h3>
-          Accedé al material de la <a href='#/capacitacion'>capacitación sobre Empleo Público, Derecho Administrativo y Convenio Colectivo de Trabajo</a> que organizamos para ayudarte a preparte para los concursos.
+          Accedé al material de la <a href='#/capacitate'>capacitación sobre Empleo Público, Derecho Administrativo y Convenio Colectivo de Trabajo</a> que organizamos para ayudarte a preparte para los concursos.
         </div>
       </div>
 
