fix redirect bug with mteyss domain

--- a/capacitate.html
+++ b/capacitate.html
@@ -49,14 +49,14 @@
           <br />
 
           <p>
-            Haciendo click <a href='/#/biblioteca/otros/capacitacion_ate'>aquí</a> podrás acceder a todo el material de la capacitación.
+            Haciendo click <a href='#/biblioteca/otros/capacitacion_ate'>aquí</a> podrás acceder a todo el material de la capacitación.
           </p>
           <div class="logo-sistemas">
             <img src="img/capacitacion/capacitacion_02.jpg"/>
           </div>
           <br />
           <p>
-            No dejen de consultar la <a href='/#/biblioteca'>Biblioteca Digital</a> para encontrar más material de interés.
+            No dejen de consultar la <a href='#/biblioteca'>Biblioteca Digital</a> para encontrar más material de interés.
           </p>
 
         </div>
