use pretty field instead of filter

--- a/biblioteca.html
+++ b/biblioteca.html
@@ -27,7 +27,7 @@
       <div class="biblioteca-item" ng-repeat="item in items">
         <a class="list-group-item" ng-click='open(item.full)'
           href='#/biblioteca{{ item.full }}?q=' ng-if='item.type === "folder"'>
-          <b>{{ item.name | pretty }}</b>
+          <b>{{ item.pretty }}</b>
           <span class="biblioteca-file-count">
           &nbsp;{{ item.childrenCount }} archivos
           </span>
@@ -35,7 +35,7 @@
         </a>
         <a class="list-group-item biblioteca-file" ng-if='item.type === "file"'
           href='{{ item.url }}' target='_blank' ng-click='trackDownload(item)'>
-          {{ item.name | pretty }} <i class="fa fa-external-link pull-right"></i>
+          {{ item.pretty }} <i class="fa fa-external-link pull-right"></i>
         </a>
       </div>
     </div>
