--- a/index.html
+++ b/index.html
@@ -88,8 +88,11 @@
     <script src="demo.js"></script>
     <script src="src/custom/repoModule.js"></script>
     <script src="src/custom/faqsModule.js"></script>
+    <script src="src/custom/quizzesModule.js"></script>
+    <script src="src/custom/stringModule.js"></script>
     <script src="src/custom/contentsModule.js"></script>
     <script src="src/custom/bibliotecaCtrl.js"></script>
+    <script src="src/custom/evaluateCtrl.js"></script>
 
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
