--- a/sidebar.html
+++ b/sidebar.html
@@ -8,6 +8,7 @@
 
       </a>
       <a class="list-group-item" href="#/capacitate">Capacita<i>ATE</i><i class="fa fa-chevron-right pull-right"></i></a>
+      <!-- <a class="list-group-item" href="#/evaluate">Evalu<i>ATE</i><i class="fa fa-chevron-right pull-right"></i></a> -->
       <a class="list-group-item" href="#/preguntas">Preguntas frecuentes <i class="fa fa-chevron-right pull-right"></i></a>
       <a class="list-group-item" href="#/links">Links de interés <i class="fa fa-chevron-right pull-right"></i></a>
       <a class="list-group-item" href="#/afiliate">Afili<i>ATE</i><i class="fa fa-chevron-right pull-right"></i></a>
