--- a/evaluate.html
+++ b/evaluate.html
@@ -4,25 +4,7 @@
   </span>
 </div>
 
-<div class="scrollable" ui-state="searchBar">
+<div ng-include="'quizzes.html'" ng-if="!quiz"></div>
 
-  <div class="scrollable-content" ui-scroll-bottom='bottomReached()'>
-    <div class="list-group contenidos-items">
+<div ng-include="'quizz.html'" ng-if="quiz"></div>
 
-      <div class="biblioteca-item" ng-repeat="quiz in quizzes">
-        <a class="list-group-item" href='#/evaluate/{{ quiz.code }}'>
-          <b>{{ quiz.title }}</b>
-          <span class="biblioteca-file-count">
-          &nbsp;{{ quiz.questions.length }} preguntas
-          </span>
-          <hr />
-actividades de carácter transitorio o estacional actividades por tiempo determinado propias del personal de planta permanente para proyectos especiales o para atender incrementos no permanentes de tareas necesarias para complementar el ejercicio de las acciones y competencias asignadas a cada jurisdicción que no puedan ser cubiertas por cada jurisdicción por falta de personal
-
-          <i class="fa fa-graduation-cap pull-right"></i>
-        </a>
-      </div>
-    </div>
-  </div>
-
-
-</div>
